/*
 * Copyright 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "com/alexvanyo/composelife/preferences/proto/algorithm.proto";
import "com/alexvanyo/composelife/preferences/proto/current_shape_type.proto";
import "com/alexvanyo/composelife/preferences/proto/dark_theme_config.proto";
import "com/alexvanyo/composelife/preferences/proto/quick_access_setting.proto";
import "com/alexvanyo/composelife/preferences/proto/shapes.proto";
import "com/alexvanyo/composelife/preferences/proto/tool_config.proto";
import "com/alexvanyo/composelife/preferences/proto/uuid.proto";

option java_package = "com.alexvanyo.composelife.preferences.proto";
option java_multiple_files = true;

message PreferencesProto {
  AlgorithmProto algorithm = 1;
  CurrentShapeTypeProto current_shape_type = 2;
  RoundRectangleProto round_rectangle = 3;
  UUIDProto round_rectangle_session_id = 14;
  UUIDProto round_rectangle_value_id = 15;
  DarkThemeConfigProto dark_theme_config = 4;
  repeated QuickAccessSettingProto quick_access_settings = 5;
  bool disable_agsl = 6;
  bool disable_opengl = 7;
  bool do_not_keep_process = 8;
  ToolConfigProto touch_tool_config = 9;
  ToolConfigProto stylus_tool_config = 10;
  ToolConfigProto mouse_tool_config = 11;
  bool completed_clipboard_watching_onboarding = 12;
  bool enable_clipboard_watching = 13;
}
